trunk/Archive2/8e/117073ca3637d1/output
main.cpp:1:1: error: unknown type name 'http'
http://www.sgi.com/tech/stl/Predicate.html#include <vector>
^
main.cpp:1:5: error: expected unqualified-id
http://www.sgi.com/tech/stl/Predicate.html#include <vector>
    ^
2 errors generated.
